# generic-diff

./: CHANGELOG.md  README.md  cabal.project  default.nix  generic-diff.cabal  shell.nix
.github/workflows/: haskell.yml
examples/containers-instances/: generic-diff-containers.cabal
examples/containers-instances/src/Generics/Diff/Special/: Seq.hs  Tree.hs
examples/containers-instances/test/Generics/Diff/: PropertyTestsSpec.hs  UnitTestsSpec.hs
generic-diff/: CHANGELOG.md  README.md  generic-diff.cabal
generic-diff-instances/: CHANGELOG.md  README.md  generic-diff-instances.cabal
generic-diff-instances/src/Generics/Diff/Special/: Map.hs  Set.hs  Tree.hs
generic-diff-instances/test/Generics/Diff/: UnitTestsSpec.hs
generic-diff/src/Generics/: Diff.hs
generic-diff/src/Generics/Diff/: Class.hs  Instances.hs  Render.hs  Special.hs  Type.hs
generic-diff/test/: Util.hs  doctests.hs
generic-diff/test/Generics/Diff/: PropertyTestsSpec.hs  UnitTestsSpec.hs
nix/: nixpkgs.nix  pre-commit.nix  sources.json
src/: Diff.hs
src/Diff/: Generic.hs  Type.hs
src/Generics/: Diff.hs
src/Generics/Diff/: Class.hs  Instances.hs  Render.hs  Special.hs  Type.hs
src/Generics/Diff/Special/: List.hs
test/Generics/Diff/: PropertyTestsSpec.hs  UnitTestsSpec.hs
