cabal-version:      3.0
name:               generic-diff
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Frederick Pringle
maintainer:         freddyjepringle@gmail.com
copyright:          Copyright(c) Frederick Pringle 2025
homepage:           https://github.com/fpringle/generic-diff
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields -Wno-unused-do-bind

common deps
  build-depends:
    , base >= 4
    , sop-core
    , generics-sop
    , text

common extensions
  default-extensions:
    BangPatterns
    DeriveGeneric
    DerivingVia 
    FlexibleContexts
    FlexibleInstances
    GADTs
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PackageImports
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns
    RankNTypes
    UndecidableInstances
    KindSignatures
    DataKinds
    StandaloneKindSignatures
    AllowAmbiguousTypes
    DefaultSignatures
    PolyKinds
    TypeFamilies
    ConstraintKinds
    StandaloneDeriving
    Arrows
    TypeOperators

library
  import:
      warnings
    , deps
    , extensions
  exposed-modules:
      Generics.Diff
      Generics.Diff.Class
      Generics.Diff.Instances
  other-modules:
      Generics.Diff.Type

  -- other-modules:
  -- other-extensions:
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite generic-diff-test
  import:
      warnings
    , deps
    , extensions
  default-language: Haskell2010
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:
    Generics.Diff.UnitTestsSpec
  build-tool-depends:
      hspec-discover:hspec-discover
  ghc-options:      -Wno-orphans
  build-depends:
    , generic-diff
    , QuickCheck
    , hspec
