cabal-version:      3.0
name:               generic-diff-containers
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Frederick Pringle
maintainer:         freddyjepringle@gmail.com
copyright:          Copyright(c) Frederick Pringle 2025
homepage:           https://github.com/fpringle/generic-diff
build-type:         Simple

common warnings
  ghc-options: -Wall

common deps
  build-depends:
    , base >= 4.12 && < 5
    , generic-diff
    , sop-core >= 0.4.0.1 && < 0.6
    , generics-sop >= 0.4 && < 0.6
    , text >= 1.1 && < 2.2
    , containers

common extensions
  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    OverloadedStrings
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library
  import:
      warnings
    , deps
    , extensions
  exposed-modules:
      Generics.Diff.Special.Seq
      Generics.Diff.Special.Map
      Generics.Diff.Special.Set
      Generics.Diff.Special.Tree

  hs-source-dirs:   src
  default-language: Haskell2010
